# charta

./: CHANGELOG.md  README.md  Setup.hs  aoc-1-input.ch  aoc-1.ch  charta.cabal  example-ascii.ch  example.ch  fibo.ch  fibo2.ch  stack.ch  test.ch  test.sh
app/: Analyzer.hs  Core.hs  FFI.hs  IRPasses.hs  Interpreter.hs  Main.hs  Parser.hs  ProgramBuilder.hs  StdLib.hs  Traverser.hs
app/FFI/: Unix.hs
app/StdLib/: FS.hs  IO.hs
docs/: Advanced.md  Cheatsheet.md  Get-Started.md
examples/: aoc-1.ch  core-fns.ch  example.ch  fibo.ch  lambdas.ch  map.ch  piglatin.ch  std-fs.ch  std-strings.ch
stdlib/: fs.ch  io.ch  strings.ch
