cabal-version:   3.14
name:            charta
version:         0.1.0.0
license:         NONE
author:          Pancakey8
maintainer:      pancake-08@proton.me
build-type:      Custom
extra-doc-files: CHANGELOG.md

custom-setup
    setup-depends: base ^>=4.21.0.0,
                   Cabal,
                   directory,
                   filepath

common warnings
    ghc-options: -Wall

executable charta
    import:           warnings
    main-is:          Main.hs
    build-depends:    directory ^>=1.3.9.0,
                      base ^>=4.21.0.0,
                      parsec,
                      containers,
                      filepath,
                      directory
    hs-source-dirs:   app
    other-modules:    Parser,
                      Traverser,
                      IRPasses,
                      Interpreter,
                      Core,
                      ProgramBuilder,
                      StdLib,
                      StdLib.IO
    default-language: Haskell2010

